[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "MotoCANlib"
version = "1.0.0"
authors =
  { name="Dani White" },
  { name="Mingfei Duan" },
  { name="Bowen Wu" },
  { name="Skanda Koppula" },
  { name="Nick Stathas" },
  { name="Sebastian Lopez-Cot" },
  { name="Reng Zheng" },
description = "A program that autogenerates C++ CAN interfaces from a YAML file primarily for use on MIT Motorsports's electric vehicle."
readme = "README.md"
requires-python = ">=3.8"
classifiers =
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache-2.0",
    "Operating System :: OS Independent",

[project.urls]
Homepage = "https://github.com/MITMotorsports/CANlib"
Issues = "https://github.com/MITMotorsports/CANlib/issues"

[options]
package_dir=
    =src
packages=find:

[options.package_data]
generator = templates/*.jinja2

[options.packages.find]
where=src
